tests/compile_fail/ktstr_test_config_without_def.stderr
error[E0080]: evaluation panicked: test supplies `config = ...` but the scheduler does not declare `config_file_def`; remove `config = ...` or add `config_file_def(arg_template, guest_path)` to the scheduler definition
 --> tests/compile_fail/ktstr_test_config_without_def.rs:8:1
  |
8 | #[ktstr_test(config = "{}")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `__KTSTR_CONFIG_PAIRING_CONFIG_WITHOUT_DEF` failed here
